// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skeleton /> should render the circular skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={64}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "borderRadius": 9999,
          "height": 64,
          "width": 64,
        },
      ]
    }
    type="circular"
    width={64}
  />
</View>
`;

exports[`<Skeleton /> should render the rectangular skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={200}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "height": 200,
          "width": 400,
        },
      ]
    }
    type="rectangular"
    width={400}
  />
</View>
`;

exports[`<Skeleton /> should render the text skeleton 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "opacity": 0.1,
    }
  }
>
  <View
    height={32}
    style={
      Array [
        Object {
          "backgroundColor": "#F5F5FA",
          "height": 24,
          "width": 61,
        },
      ]
    }
    type="text"
    variant="body1"
    width={61}
  />
</View>
`;
